b2c/sfsc/src/objects/Order_Line_Item__c.object
<CustomObject>
    <description>This object is to be used to retrieve and display the order line items from Commerce Cloud</description>
    <fields>
        <fullName>Detailview_Image_Link__c</fullName>
        <description>Detailview Image Link</description>
        <inlineHelpText>Detailview Image Link</inlineHelpText>
        <label>Detailview Image Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>	
        <fullName>Order_Line_Item_Product_Id__c</fullName>	
        <label>Related Product Id</label>	
        <length>255</length>	
        <type>Text</type>	
    </fields>
    <fields>
        <fullName>Variant_Info__c</fullName>
        <label>Variant Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listview_Image_Link__c</fullName>
        <description>Listview Image Link</description>
        <inlineHelpText>Listview Image Link</inlineHelpText>
        <label>Listview Image Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order</description>
        <inlineHelpText>Order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_After_Item_Discount__c</fullName>
        <label>Price After Item Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_After_Order_Discount__c</fullName>
        <label>Price After Order Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <description>Product Id</description>
        <inlineHelpText>Product Id</inlineHelpText>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity</description>
        <inlineHelpText>Quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>